--- a/Frontend/my-app/index.html
+++ b/Frontend/my-app/index.html
@@ -9,5 +9,50 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <div id="google_translate_element"></div>
+
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement(
+      { pageLanguage: "en", includedLanguages: "en,hi" },
+      "google_translate_element"
+    );
+  }
+</script>
+
+<script
+  type="text/javascript"
+  src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+></script>
+
+<style>
+  /* Hide the default Google Translate dropdown */
+  #google_translate_element {
+    display: none;
+  }
+</style>
+
+
+    <script>
+      // Get current font size of <html>
+      let html = document.documentElement;
+      let currentFontSize = parseInt(window.getComputedStyle(html).fontSize);
+
+      const increaseBtn = document.getElementById("increaseFont");
+      const decreaseBtn = document.getElementById("decreaseFont");
+
+      increaseBtn.addEventListener("click", () => {
+        currentFontSize += 2;
+        html.style.fontSize = currentFontSize + "px";
+      });
+
+      decreaseBtn.addEventListener("click", () => {
+        if (currentFontSize > 10) {
+          currentFontSize -= 2;
+          html.style.fontSize = currentFontSize + "px";
+        }
+      });
+    </script>
+
   </body>
 </html>
